<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.uma.jmetal</groupId>
  <artifactId>Evolver</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>oss-sonatype</id>
      <name>oss-sonatype</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.9.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.uma.jmetal</groupId>
      <artifactId>jmetal-core</artifactId>
      <version>6.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.uma.jmetal</groupId>
      <artifactId>jmetal-algorithm</artifactId>
      <version>6.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.uma.jmetal</groupId>
      <artifactId>jmetal-component</artifactId>
      <version>6.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.uma.jmetal</groupId>
      <artifactId>jmetal-parallel</artifactId>
      <version>6.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.uma.jmetal</groupId>
      <artifactId>jmetal-problem</artifactId>
      <version>6.1-SNAPSHOT</version>
    </dependency>

  </dependencies>
</project>